<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/digite_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/eContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/digite_contrasena"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/iniciar_sesion"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:onClick="onIniciarSesionClicked"/>

    <TextView
        android:id="@+id/tRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/registrarse"
        android:textColor="@color/blue"
        android:onClick="onRegistrarseClicked"/>
</LinearLayout>