<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="100dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="5dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/iFoto"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tNombre"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/nombre_producto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/tDescripcion"
                android:text="@string/descripcion_producto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tPrecio"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:gravity="end"
                android:text="@string/precio_producto"/>
        </LinearLayout>





    </LinearLayout>

</android.support.v7.widget.CardView>